helm/jenkins-setup.yml
apiVersion: v1
kind: Namespace
metadata:
  name: employee
