helm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-mgmt-ingress-vault
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: employeemgmtingressvault
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
   #alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:911167901499:certificate/c8570f67-513e-43bc-aad7-1ac5f3a38f37
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: awsvault.cloud-net-mgmt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: employee-frontend-service
            port: 
              number: 80
  - host: awstest.cloud-net-mgmt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: employee-backend-service
            port: 
              number: 80
